--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "neverland",
-  "version": "2.4.1",
+  "name": "neverland-bench",
+  "version": "0.0.7",
   "description": "React like Hooks for hyperHTML",
   "main": "cjs/index.js",
   "module": "esm/index.js",
@@ -31,7 +31,9 @@
     ]
   },
   "dependencies": {
-    "dom-augmentor": "^1.2.1",
+    "@ungap/template-tag-arguments": "^0.3.1",
+    "@ungap/weakmap": "^0.1.4",
+    "dom-augmentor": "^1.4.0",
     "lighterhtml": "^2.0.2"
   },
   "devDependencies": {
@@ -41,7 +43,7 @@
     "drop-babel-typeof": "^1.0.3",
     "http-server": "^0.11.1",
     "nightmare": "^3.0.2",
-    "rollup": "^1.27.0",
+    "rollup": "^1.27.3",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-node-resolve": "^5.2.0",
     "uglify-es": "^3.3.9"
