--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "types": "index.d.ts",
   "scripts": {
     "build": "npm run rollup && drop-babel-typeof index.js && npm run cjs && npm run min && npm run test && npm run size",
-    "build:typings": "tsc --allowJs --emitDeclarationOnly",
+    "build:types": "tsc --allowJs --emitDeclarationOnly",
     "cjs": "ascjs esm cjs",
     "min": "echo '/*! (c) Andrea Giammarchi - ISC */' > min.js && uglifyjs index.js -c -m >> min.js",
     "rollup": "rollup --config rollup.config.js",
@@ -46,7 +46,7 @@
     "drop-babel-typeof": "^1.0.3",
     "http-server": "^0.12.0",
     "nightmare": "^3.0.2",
-    "rollup": "^1.27.12",
+    "rollup": "^1.27.13",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-node-resolve": "^5.2.0",
     "typescript": "^3.7.3",
