--- a/package.json
+++ b/package.json
@@ -36,20 +36,20 @@
     "@ungap/template-tag-arguments": "^0.3.1",
     "@ungap/weakmap": "^0.1.4",
     "dom-augmentor": "^2.0.5",
-    "lighterhtml": "^2.0.9"
+    "lighterhtml": "^2.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "ascjs": "^3.1.2",
-    "basichtml": "^2.0.0",
+    "basichtml": "^2.0.2",
     "drop-babel-typeof": "^1.0.3",
-    "http-server": "^0.12.0",
+    "http-server": "^0.12.1",
     "nightmare": "^3.0.2",
-    "rollup": "^1.28.0",
+    "rollup": "^2.0.0-2",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "typescript": "^3.7.4",
+    "typescript": "^3.8.3",
     "uglify-es": "^3.3.9"
   },
   "repository": {
