--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "ascjs": "^3.1.2",
-    "basichtml": "^2.0.2",
+    "basichtml": "^2.1.4",
     "drop-babel-typeof": "^1.0.3",
     "http-server": "^0.12.1",
     "nightmare": "^3.0.2",
-    "rollup": "^2.0.0-2",
-    "rollup-plugin-babel": "^4.3.3",
+    "rollup": "^2.0.3",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "typescript": "^3.8.3",
     "uglify-es": "^3.3.9"
