--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   "dependencies": {
     "@ungap/template-tag-arguments": "^0.3.1",
     "@ungap/weakmap": "^0.1.4",
-    "dom-augmentor": "^2.0.5",
-    "lighterhtml": "^2.1.0"
+    "dom-augmentor": "^2.0.6",
+    "lighterhtml": "^2.4.0",
+    "uarray": "^1.0.0",
+    "umap": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
@@ -46,7 +48,7 @@
     "drop-babel-typeof": "^1.0.3",
     "http-server": "^0.12.1",
     "nightmare": "^3.0.2",
-    "rollup": "^2.0.3",
+    "rollup": "^2.0.6",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "typescript": "^3.8.3",
